publish: change deploy branch
generated from commit 07274df6cf0e611785da01a7969fd3b2ee989167

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -216,7 +217,7 @@
         <h1 id='introduction'>Introduction</h1>
 <p>Welcome to the MWW OnDemand API! You can use our API to access MWW OnDemand API endpoints, which will allow you to submit orders, query order status, and update orders.</p>
 
-<p>We have language bindings in Shell, Ruby, and Python (Coming Soon)! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
+<p>We have language bindings in Shell, Ruby, Python, Java, and PHP! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
 
 <p>Our API conforms to the JSON API 1.0 Specification. Please visit http://jsonapi.org for more information.</p>
 <h2 id='postman-collection'>Postman Collection</h2>
@@ -324,7 +325,7 @@ curl -X GET https://api.mwwondemand.com/api/login <span class="se">\</span>
       <span class="c1">// Print content</span>
       <span class="n">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span><span class="n">content</span><span class="o">);</span>
     <span class="o">}</span>
-    <span class="k">catch</span> <span class="o">(</span><span class="n">IOException</span> <span class="n">e</span><span class="o">)</span> <span class="o">{</span>
+    <span class="k">catch</span> <span class="o">(</span><span class="n">IOException</span> <span class="n">e</span><span class="o">)</span> <span class="o">{</span> 
       <span class="n">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span><span class="n">e</span><span class="o">);</span>
     <span class="o">}</span>
   <span class="o">}</span>
